# kokoro-deutsch

./: .gitignore  .gitmodules  AGENTS.md  NOTICE  README.md  pyproject.toml
configs/: config_german_ft.yml
docs/: ARCHITECTURE.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
kokoro/: __main__.py  model.py  pipeline.py
scripts/: extract_voicepack.py  prepare_dataset.py  prepare_training.py  test_inference.py
training/: OOD_texts.txt
