[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokoro-deutsch"
version = "0.1.0"
description = "Fine-tuning Kokoro-82M for German TTS using StyleTTS2"
readme = "README.md"
authors = [
    { name="semidark" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub",
    "loguru",
    "misaki[en]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]

[project.scripts]
kokoro = "kokoro.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokoro"]
only-packages = true

[project.urls]
Homepage = "https://github.com/semidark/kokoro-deutsch"
Repository = "https://github.com/semidark/kokoro-deutsch"
Upstream = "https://github.com/hexgrad/kokoro"
